--- a/journal/02.md
+++ b/journal/02.md
@@ -16,4 +16,4 @@ AWS SAM (Serverless Application Model) is an AWS framework simplifying the devel
 [For More Information](https://docs.aws.amazon.com/serverless-application-model/)
 
 
-## More Notes to Come......
+## More Notes to Come....
