#7 cloudfront distribution deployed

--- a/journal/02.md
+++ b/journal/02.md
@@ -16,4 +16,11 @@ AWS SAM (Serverless Application Model) is an AWS framework simplifying the devel
 [For More Information](https://docs.aws.amazon.com/serverless-application-model/)
 
 
-## More Notes to Come......
+
+# Create S3 bucket name parameter
+aws ssm put-parameter --name "/YourStack/S3BucketName" --value "your-s3-bucket-name" --type String --overwrite
+
+# Create S3 origin ID parameter
+aws ssm put-parameter --name "/YourStack/S3OriginId" --value "YourUniqueIdentifier" --type String --overwrite
+
+## More Notes to Come....
